--- a/2.html
+++ b/2.html
@@ -14,6 +14,10 @@
       <h2>Lab Diary</h2>
       Hi It's <strong><u>JuJu</u></strong>'s Lab Diary.
 
-          <p style="margin-top:40px;"></p>
+          <p style="margin-top:40px;"> 2021.06.21. 일주일만에 랩에 나왔다.
+             <br>먼지가 수북히 쌓인 랩에 혼자 덩그러니 들어가 오늘은 또 어떤 일들을 하며 시간을 알차게 보낼 수 있을지 계획을 짜고 있다.
+             <br> 우선 1학기에 조교로 들어갔던 분석 실험에 대한 노트를 작성할 생각이다.
+             <br> 포트폴리오 형식으로 내용도 정리하고 사진도 첨부할 계획인데,,, 사진은 없는 것이 많은 관계로 실험을 다시 진행하기도 할 생각이다. </p>
+             <img src="062101.jpg" width="50%">
 </body>
 </html>
