--- a/1.html
+++ b/1.html
@@ -14,7 +14,7 @@
       <h2>Coding Diary</h2>
       Hi It's <strong><u>JuJu</u></strong>'s Coding Diary.
 
-          <p style="margin-top:40px;">2021.06.18. As of 6p.m., I'am learning the basics of coding.
+          <p style="margin-top:40px;"><input type="checkbox"> 2021.06.18. As of 6p.m., I'am learning the basics of coding.
           <br>I'm listening to free lectures through <a href="https://opentutorials.org/course/3084/18438"
           target="_blank" title="생활코딩">the life coding site</a> and trying coding, which is interesting.</p>
           <img src="coding.jpg" width="50%">
