--- a/3.html
+++ b/3.html
@@ -14,6 +14,9 @@
       <h2>etc</h2>
       This page will be filled with <strong>diaries of <u>my various activities</u>.</strong>
 
-          <p style="margin-top:40px;"></p>
+          <p style="margin-top:40px;"> 2021.06.21.
+            <br> <input type="checkbox"> 운전면허 필기 공부
+            <br> <input type="checkbox"> 맥머리의 유기화학 다시 공부하면서 내용 정리
+            <br> <input type="checkbox"> 토익 공부 다시 시작 (일요일에 시험)</p>
 </body>
 </html>
