--- a/JuJuLog.html
+++ b/JuJuLog.html
@@ -8,9 +8,9 @@
   <h1><a href="JuJuLog.html">JuJuLog</a></h1>
     <p>From now on(2021.06.18.), I will record all my journeys on this web.</p>
       <ol>
-          <li><a href="1.html">Coding Diary</a></li>
-          <li><a href="2.html">Lab Diary</a></li>
-          <li><a href="3.html">etc</a></li>
+          <li><a href="Coding.html">Coding Diary</a></li>
+          <li><a href="Lab.html">Lab Diary</a></li>
+          <li><a href="etc.html">etc</a></li>
       </ol>
       <h2>JuJuLog</h2>
       Hi It's JuJu.<br>This web is my record of everything.
